--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% if latest_question_list %}
 <ul>
 {% for question in latest_question_list %}
-    <li><a href="% url 'polls:detail' question.id %">{{ question.question_text }}</a></li>
+    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }} Hi there id is: {{question.id}}</a></li>
 {% endfor %}
 </ul>
 {% else %}
