--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 {% if latest_question_list %}
 <ul>
 {% for question in latest_question_list %}
@@ -6,4 +8,4 @@
 </ul>
 {% else %}
 <p>No polls are available.</p>
-{% endif %}
+{% endif %} 
